Add note that for now --add-modules is needed to launch Sling.